--- a/index.html
+++ b/index.html
@@ -668,40 +668,40 @@ http://www.templatemo.com/tm-395-urbanic
 
 
                     <br>
-                    <font size="5"><b>Awards: </b></font>
+                    <font size="5"><b>Awards and scholarships: </b></font>
 	                  <ul type="disc"; style="margin-bottom:
                                                   6px">
-	                    <li><b>Honors:</b><br>
+	                    <li><b>Awards:</b><br>
 	                      <ul type="circle">
                                 <li> Chinese Government Award For
                                 Outstanding PhD Scholar Abroad,
-                                2016. (3% in UK, 1% worldwide.)</li>
+                                  2016. (3% in UK, 1% worldwide.)</li>
                                 <li>First place award, the Coniston
                                   poster competition, University of
                                   Birmingham, UK, 2014.</li>
                                 <li>Outstanding Graduates of Heilongjiang Province, Heilongjiang,
-                                  China, 2009;</li>
+                                  China, 2009.</li>
                                 <li>Outstanding Graduates of Northeast Agricultural University,
-                                  Harbin, Heilongjiang, China, 2009;</li>
+                                  Harbin, Heilongjiang, China, 2009.</li>
                                 <li>Best Undergraduate Thesis Award, Northeast Agricultural
-                                  University, Harbin, Heilongjiang, China, 2009;</li>
+                                  University, Harbin, Heilongjiang, China, 2009.</li>
                                 <li>Outstanding Academic Award, The Northeast Agricultural
-                                  University, China, 2008;</li>
+                                  University, China, 2008.</li>
                                 <li>
                                   First National Prize of China
                                   Contemporary Undergraduate
                                   Mathematical Contest in Modeling,
-                                  China, 2007;
+                                  China, 2007.
                                 </li>
                                 <li>
                                   Second National Prize of China Contemporary Undergraduate
-                                  Mathematical Contest in Modeling, China, 2006;
+                                  Mathematical Contest in Modeling, China, 2006.
                                 </li>
                                 <li>Outstanding Student Award of The Northeast Agricultural
-                                  University, China, 2006;</li>
+                                  University, China, 2006.</li>
                                 <li>Outstanding Student Leadership
                                   Award, The Northeast Agricultural
-                                  University, China, 2006;</li>
+                                  University, China, 2006.</li>
 	                        <br>
 	                      </ul>
 	                    </li>
@@ -711,20 +711,18 @@ http://www.templatemo.com/tm-395-urbanic
 	                        <li> Universitas 21 scholarship from
                                   the University of Birmingham,
                                   2015.</li>
-
 	                        <li> EPSRC project funding for PhD
                                   studies at University of Birmingham,
                                   2012 - 2015.</li>
-
 	                        <li> Overseas top up scholarship from
                                   the University of Birmingham for PhD
                                   studies, 2012 - 2015.</li>
                                 <li>First class scholarship, Northeast
                                   Agricultural University, Harbin,
-                                  Heilongjiang, China, 2008;</li>
+                                  Heilongjiang, China, 2008.</li>
                                 <li>First class scholarship, Northeast
                                   Agricultural University, Harbin,
-                                  Heilongjiang, China, 2007;</li>
+                                  Heilongjiang, China, 2007.</li>
                                 <li>First class scholarship, Northeast
                                   Agricultural University, Harbin,
                                   Heilongjiang, China, 2006.</li>
