--- a/index.html
+++ b/index.html
@@ -395,7 +395,11 @@ http://www.templatemo.com/tm-395-urbanic
                             trusted parties"</b></a>. <br><i> The
                             computer Journal </i>, Vol. 59 No. 11,
                             pp. 1695-1713,
-                            2016.(<a href="doc/paper/DTKI-proof.zip">Tamarin code</a>) 
+                            2016.(<a href="doc/paper/DTKI-proof.zip">Tamarin
+                            code</a>
+                            and <a href="doc/paper/DTKI-report.pdf">
+                            Technical Report
+                            </a>)
                         </li>
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
