added content descryption

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ http://www.templatemo.com/tm-395-urbanic
     <head>
         <title>Jiangshan</title> <meta name="keywords" content="Jiangshan Yu,
         information security, privacy, 于江山, 信息安全" />
-        <meta name="description" content="" />
+         <meta name="description" content="Home page of Dr. Jiangshan Yu, University of Luxembourg, Luxemb
+ourg.">
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="images/yu.png">
