--- a/index.html
+++ b/index.html
@@ -158,30 +158,33 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
 
-                                 <li>[2017-05-15] A
-                                  paper on "Authenticating
-                            compromisable storage systems"
-                                  has been accepted by the 16<sup>th</sup> IEEE TrustCom,
-                                  2017.</li>
-                                 <li> [2017-04-30] I have been awarded
-                                  for the
-                                  ``<a href="https://en.wikipedia.org/wiki/Chinese_government_award_for_outstanding_self_finance_students_abroad">Chinese
-                                  Government Award for outstanding PhD
-                                  scholar abroad</a>''. The success
-                                  rate is 3% in UK and 1% worldwide. Here is
-                                  the <a href="http://wwwen.uni.lu/snt/news_events/chinese_government_award_fans_the_flames_for_snt_researcher">news
-                                     press</a>.
-                                 </li>
-                                 <li>[2017-04-21] A
-                                  paper on "Automatically Detecting
-                                  the Misuse of Secrets: Foundations,
-                                  Design Principles, and Applications"
-                                  has been accepted by the 30<sup>th</sup> IEEE CSF,
-                                  2017.</li>
-                                </ul>
-                                </div>
-                                <br><br>
-                        </font>
+                        <li>[2017-06-29] A paper on "DECIM: Detecting
+                          Endpoint Compromise In Messaging" has been
+                          accepted by IEEE Transactions on Information Forensics and Security (TIFS), 2017.</li>
+                        <li>[2017-05-15] A
+                          paper on "Authenticating
+                          compromisable storage systems"
+                          has been accepted by the 16<sup>th</sup> IEEE TrustCom,
+                          2017.</li>
+                        <li> [2017-04-30] I have been awarded
+                          for the
+                          ``<a href="https://en.wikipedia.org/wiki/Chinese_government_award_for_outstanding_self_finance_students_abroad">Chinese
+                            Government Award for outstanding PhD
+                            scholar abroad</a>''. The success
+                          rate is 3% in UK and 1% worldwide. Here is
+                          the <a href="http://wwwen.uni.lu/snt/news_events/chinese_government_award_fans_the_flames_for_snt_researcher">news
+                            press</a>.
+                        </li>
+                        <li>[2017-04-21] A
+                          paper on "Automatically Detecting
+                          the Misuse of Secrets: Foundations,
+                          Design Principles, and Applications"
+                          has been accepted by the 30<sup>th</sup> IEEE CSF,
+                          2017.</li>
+                      </ul>
+                    </div>
+                    <br><br>
+                    </font>
 
                     <br class="clearfix"/>
                   </div>
@@ -380,7 +383,7 @@ ourg.">
                         <ul type="circle">
                           <li>
                         Jiangshan Yu and Mark
-                        Ryan.<br> <a href="doc/paper/PKI.pdf"><b>"Evaluating
+                        Ryan.<br> <a href="http://eprint.iacr.org/2017/526.pdf"><b>"Evaluating
                         web PKIs"</b></a>.<br> <i>Software
                         Architecture for Big Data and the Cloud</i>,
                         1st Edition, Chapter 7, June 2017.
@@ -389,15 +392,26 @@ ourg.">
                         </li>
 <br>
 	                    <li><b>Journal:</b><br>
-                        <ul type="circle">
+                              <ul type="circle">
+                                <li>
+                                  Jiangshan Yu, Mark Ryan, and Cas
+                                  Cremers. <br><b><a href="http://eprint.iacr.org/2015/486.pdf">"DECIM:
+                                  Detecting Endpoint Compromise In
+                                  Messaging"</a></b>.<br>
+                                  <i>IEEE Transactions on Information
+                                    Forensics and Security (TIFS)</i>,
+                                    2017, to
+                                    appear. (<a href="doc/paper/DECIM-proof.zip">Tamarin
+                                    code</a>)
+                                </li>
                           <li>
                             Jiangshan Yu, Vincent Cheval, and Mark
-                            Ryan. <br><a href="doc/paper/DTKI.pdf"><b>"DTKI:
+                            Ryan. <br><a href="https://arxiv.org/pdf/1408.1023.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
                             trusted parties"</b></a>. <br><i> The
                             computer Journal </i>, Vol. 59 No. 11,
                             pp. 1695-1713,
-                            2016.(<a href="doc/paper/DTKI-proof.zip">Tamarin
+                            2016. (<a href="doc/paper/DTKI-proof.zip">Tamarin
                             code</a>
                             and <a href="doc/paper/DTKI-report.pdf">
                             Technical Report
@@ -430,7 +444,7 @@ ourg.">
 	                      <ul type="circle">
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu,
-                            Mark Ryan. <br> <a href="doc/paper/AutoDetect.pdf"><b>"Automatically
+                            Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
                             Applications"</b></a>. <br> <i> IEEE CSF 2017. (To appear)
@@ -439,7 +453,7 @@ ourg.">
 
                           <li>
                             Jiangshan Yu, Mark Ryan and Liqun
-                            Chen. <br> <a href="doc/paper/AuthCompStorage.pdf"><b>"Authenticating
+                            Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
                             compromisable storage systems"</b></a>, <br>IEEE TrustCom 2017. (To appear)
                           </li>
 
@@ -501,26 +515,18 @@ ourg.">
 
                       <br>
 
-                      <li><b>Draft:</b><br> 
-	                      <ul type="circle">
-                          <li>
-                        Jiangshan Yu, Mark Ryan, and Cas
-                        Cremers. <a href="doc/paper/DECIM.pdf">"DECIM:
-                        Detecting Endpoint Compromise In
-                        Messaging"</a>. <i> IACR Cryptology ePrint
-                        Archive 2015: 486</i>,
-                        2015. (<a href="doc/paper/DECIM-proof.zip">Tamarin
-                        code</a>)
-                        </li>
+                      <!-- <li><b>Draft:</b><br>  -->
+	              <!--         <ul type="circle"> -->
+                          
 
-                         <!-- <li> -->
-                         <!--   Jiangshan Yu, Guilin Wang, and Yi -->
-                         <!--   Mu. "Efficient and Provably Secure Single -->
-                         <!--   Sign-on Schemes in Distributed Systems and -->
-                         <!--   Networks", 2015. -->
-                         <!-- </li> -->
-                              </ul>
-                      </li>
+                      <!--    <\!-- <li> -\-> -->
+                      <!--    <\!--   Jiangshan Yu, Guilin Wang, and Yi -\-> -->
+                      <!--    <\!--   Mu. "Efficient and Provably Secure Single -\-> -->
+                      <!--    <\!--   Sign-on Schemes in Distributed Systems and -\-> -->
+                      <!--    <\!--   Networks", 2015. -\-> -->
+                      <!--    <\!-- </li> -\-> -->
+                      <!--         </ul> -->
+                      <!-- </li> -->
                     </ul>
 
                           <!-- Kevin, Cas, JS, and Mark, Detecting the
