--- a/index.html
+++ b/index.html
@@ -301,26 +301,26 @@ ourg.">
 
             <div class="col-lg-offset-3 JYuinfo_right">
               <font size="4">
-                <b><font size="5">Some quotes from Dr. Richard W. Hamming</b>
-                </font>
-                <ul type="circle" style="margin-bottom: 6px">
-                                  <li>"What are the important problems of
-                                  your field?"</li>
+              <!--   <b><font size="5">Some quotes from Dr. Richard W. Hamming</b> -->
+              <!--   </font> -->
+              <!--   <ul type="circle" style="margin-bottom: 6px"> -->
+              <!--                     <li>"What are the important problems of -->
+              <!--                     your field?"</li> -->
 
-                                  <li>"If what you are doing is not
-                                  important, and if you don't think it
-                                  is going to lead to something
-                                  important, why are you working on
-                                  it?"</li><br><b>(What is your
-                                  answer? Happy to discuss!)</b> <br>
-                                  Note that you can always "try and
-                                  change what is difficult to some
-                                  other situation which is easily done
-                                  but is still important." --- also
-                                  from Dr. Richard W. Hamming.
-                            </ul>
+              <!--                     <li>"If what you are doing is not -->
+              <!--                     important, and if you don't think it -->
+              <!--                     is going to lead to something -->
+              <!--                     important, why are you working on -->
+              <!--                     it?"</li><br><b>(What is your -->
+              <!--                     answer? Happy to discuss!)</b> <br> -->
+              <!--                     Note that you can always "try and -->
+              <!--                     change what is difficult to some -->
+              <!--                     other situation which is easily done -->
+              <!--                     but is still important." --- also -->
+              <!--                     from Dr. Richard W. Hamming. -->
+              <!--               </ul> -->
 
-                            <br><br>
+              <!--               <br><br> -->
 
 
                             <font size="5"><b>Grant: </b></font>
