change li to oi

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ ourg.">
 	                  <ul type="square"; style="margin-bottom:
                                                     6px">
 	                    <li><b>Book Chapter:</b><br>
-                        <ul type="circle">
+                        <ol type="1">
                           <li>
                         Jiangshan Yu and Mark
                         Ryan.<br> <a href="http://eprint.iacr.org/2017/526.pdf"><b>"Evaluating
@@ -388,11 +388,11 @@ ourg.">
                         Architecture for Big Data and the Cloud</i>,
                         1st Edition, Chapter 7, June 2017.
                           </li>
-                        </ul>
+                        </ol>
                         </li>
 <br>
 	                    <li><b>Journal:</b><br>
-                              <ul type="circle">
+                              <ol type="1" start = "2">
                                 <li>
                                   Jiangshan Yu, Mark Ryan, and Cas
                                   Cremers. <br><b><a href="http://eprint.iacr.org/2015/486.pdf">"DECIM:
@@ -436,12 +436,12 @@ ourg.">
                           on Industrial Informatics</i>, Vol.9, No.1,
                           pp.294-302, 2013.
                           </li>
-                        </ul>
+                        </ol>
 
                         <br>
 
 	                    <li><b>Conference:</b><br>
-	                      <ul type="circle">
+                              <ol type="1" start = "6">
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu,
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
