--- a/index.html
+++ b/index.html
@@ -543,10 +543,23 @@ ourg.">
                             <li><b>Comference Committee</b></li>
                             <ul type="circle">
                               <li>
+                                PC
+                                member, <a href="http://icc2018.ieee-icc.org">IEEE
+                                International Conference on
+                                Communications (ICC), 2018.</a>
+                              </li>
+
+                              <li>PC
+                                  member, <a href="http://nsclab.org/ispec2017/">
+                                  International Conference on
+                                  Information Security Practice and
+                                  Experience (ISPEC), 2017.
+                              </a></li>
+	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud, 2016.</a></li>
+                              <li>
                                   Chair, <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, September 18, 2015.</li>
-	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud, 2016.</a></li>
                             </ul>
                             
                             <br>
