remove text from biz

--- a/index.html
+++ b/index.html
@@ -909,79 +909,15 @@ ourg.">
                     </div>
             <div class="col-lg-offset-3 JYuinfo_right">
                               <font size="4">
-                                <font size="4">I'm a
-                                        director of CloudTomo, a
-                                        university spin-out company
-                                        providing security solutions
-                                        for email and cloud
+                                <font size="4">I'm a director of
+                                        CloudTomo, a university
+                                        spin-out company providing
+                                        public ledger-based
+                                        applications and security
+                                        solutions for email and cloud
                                         storage. Please contact me for
                                         more detail.
-                              <br>
-                              <font size="5"><b>Tech-Project</b></font>
-	                  <ul type="square"; style="margin-bottom:
-                              6px">
-	                    <li><p><b>CIRT/ConfiMail</b></p> 
-                        <p>Certificate Issuance and Revocation
-                         Transparency (CIRT) is a new public key
-                         infrastructure, it enables efficient
-                         certificate issuance and revocation
-                         management, and can detect misbehaviours from
-                         certificate authorities which is required to
-                         be trusted in the current PKI. It can be
-                         applied to all systems where public key
-                         cryptography is used.</p>
-                        <p>One interesting application of CIRT is an easy-to-use
-                         and end-to-end encrypted email system, called
-                         "ConfiMail".  Public-key cryptography was invented to
-                         allow users to send encrypted mail; nevertheless, 35
-                         years later, in practice it is rather hard for users to
-                         encrypt their mail in a systematic way. S/MIME and PGP
-                         exist but have failed to take off, for reasons that
-                         have been published in the paper "Why Johnny can’t
-                         encrypt" and become well-understood. Numerous efforts
-                         to improve this situation have been made, but none of
-                         them simultaneously satisfy the requirements of
-                         usability (users should not be required to understand
-                         anything about keys, or to take any special actions)
-                         and security (encryption should be end-to-end, and
-                         there should be no trusted parties).  ConfiMail solves
-                         the two core problems – it allows users to send
-                         encrypted mail without having to understand anything
-                         about keys or certificates, and without having to rely
-                         on any trusted parties.</p>
-                        </li>
-
-                      <li><p><b>Key Usage Detection (KUD)</b></p> 
-                        <p>The key usage detection (KUD) system enables key
-                        owners to monitor the usage of their cryptographic
-                        decryption keys or signing keys, thus it can detect the
-                        unauthorised usage of secret keys. This is the first
-                        known system that makes unauthorised usage of long-term
-                        secret keys for decryption to be detectable. It can be
-                        applied to all communication systems where encryption is
-                        required.</p>
-                        <p> If a communication system (e.g. email system, online
-                        finance system, cloud services, and other sensitive data
-                        exchanging systems) was having security flaws
-                        (e.g. having malware installed or having security bugs
-                        like Heartbleed and ShellShock), or hacked by some
-                        attackers, it is possible that the secret key of the
-                        system is exposed to the attacker. In this case, the
-                        security of the system is broken until the secret key
-                        has expired or revoked. However, according to the
-                        current state of the art, there is no way for the key
-                        owner to know if the key is compromised. So, the secret
-                        key owner is not prompted to revoke the comprised secret
-                        key or take other actions. Hence, the security that the
-                        system guarantees is broken until the secret key has
-                        expired. However even when a key is expired, the new key
-                        may also become compromised. This product solves this
-                        problem by letting the key owner be able to detect the
-                        fact of a compromised secret key.  In addition, in
-                        systems where a key escrew authority exists, this
-                        product can detect if the secret key is abused.</p>
-                        </li>
-                      </ul>
+                                  <br>
                                 </font>
             </div>
                             </div>
