added research impact

--- a/index.html
+++ b/index.html
@@ -115,40 +115,66 @@ ourg.">
                             SnT
                           </a>, <a href="http://wwwen.uni.lu">
                             University of Luxembourg
-                          </a>. I am also an honorary research
-                          fellow working
+                          </a>. I am also an honorary research fellow
+                          working
                           with <a href="http://www.cs.bham.ac.uk/~mdr/">
-                            Prof. Mark Ryan</a> in
+                          Prof. Mark Ryan</a> in
                           the <a href="http://www.cs.bham.ac.uk">School
-                            of Computer
-                                Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                            of Birmingham</a>, UK, where I
-                          received my PhD in computer
-                          science.<br><br>
-                          I am interested in cyber security and
-                          cryptography. In particular, the focus of my
-                          research has been on design and analysis of
-                          cryptographic protocols, cryptographic key
-                          management, secure authentication, post
-                          compromise security, and public-ledger-based
+                          of Computer
+                          Science</a>, <a href="http://www.birmingham.ac.uk/">University
+                          of Birmingham</a>, UK, where I received my
+                          PhD in computer science.<br><br>  My
+                          research interests are in the area of cyber
+                          security and cryptography. In particular,
+                          the focus of my research has been on design
+                          and analysis of cryptographic protocols,
+                          cryptographic key management, and
+                          ledger-based (a.k.a. blockchain)
                           applications.<br><br>
 
-                          My research impact includes patent-pending
-                          public ledger applications that have
-                          attracted funding support from Innovate UK;
-                          and I've co-designed a secure booting
-                          solution for Huawei Ltd, the largest
+                          <b>
+                            Main research impact:
+                          </b><br>
+
+                          My work
+                          on <b> <a href="http://orbilu.uni.lu/handle/10993/32515">
+                          ledger-based end-to-end secure messaging
+                          system</a></b> has attracted news media's
+                          attention and has been covered by <u>more
+                          than 15 international and national news
+                          media </u>including <i> <u>Science
+                          Daily</u></i>, <i><u>Phys.org</u></i>, <i><u>ACM
+                          TechNews</u></i>, <i><u>Futurism</u></i>,
+                          and <i><u>Silicon Republic</u></i>. The news
+                          has been released in <u>more than 5
+                          languages </u>by media from <u>more than 10
+                          countries </u>including UK, US, Germany,
+                          Ireland, Luxembourg, Turkey, Spain, and
+                          India. I have also been invited for an
+                          interview (to explain my innovation to
+                          general listeners) by Eldoradio --- a member
+                          of RTL group which is one of the world's
+                          leading producers of television content and
+                          the leading European entertainment network.
+                          <br><br>
+
+                          My patent-pending <b>ledger-based
+                          applications</b> have been further developed
+                          by a University of Birmingham spin-off, and
+                          have attracted funding support from Innovate
+                          UK.<br><br>
+
+                          I've co-designed a <b> secure booting
+                            solution
+                          </b>
+                          for Huawei Ltd, the largest
                           telecommunications equipment manufacturer in
                           the world, to manage their next generation
                           network devices securely.
-                         <br>
-                         <br>
 
-                          I am also available for consultancy
-                          services,
-                          please <a href="#templatemo-contact">contact </a>
-                          me for more detail.
-                          <br>
+
+                         <br>
+                         <br>
                           <br>
                           <br>
 
@@ -566,26 +592,29 @@ ourg.">
 
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
-	                        <li><i><a href="http://www.signalprocessingsociety.org/publications/periodicals/forensics/">IEEE
+	                        <li><i>IEEE
 	                        Transactions on Information Forensics &
-	                              Security</a></i></li>
-                                                                <li><i><a href="https://www.computer.org/web/tcc">
+	                              Security</i></li>
+                                <li><i>
                                       IEEE Transactions on Cloud
                                       Computing
-                                </a></i></li>
+                                </i></li>
+                                <li><i>
+                                      IEEE Transactions on Industrial Informatics
+                                </i></li>
 
-                                <li><i><a href="http://onlinelibrary.wiley.com/journal/10.1002/%28ISSN%291939-0122">
+                                <li><i>
                                       Security and Communication
                                       Networks
-                                </a></i></li>
-				<li><i><a href="http://comjnl.oxfordjournals.org">The Computer Journal</a></i></li>
-                                <li><i><a href="http://link.springer.com/journal/10207">
+                                </i></li>
+				<li><i>The Computer Journal</i></li>
+                                <li><i>
                                       International Journal of
                                       Information Security
-                                </a></i></li>
-	                        <li><i><a href="http://ees.elsevier.com/jisa/">Journal
+                                </i></li>
+	                        <li><i>Journal
 	                        of Information Security and
-	                              Applications</a></i></li>
+	                              Applications</i></li>
 	                      </ul>
 	                    </li>
 
