--- a/index.html
+++ b/index.html
@@ -440,8 +440,7 @@ ourg.">
                             2016. (<a href="doc/paper/DTKI-proof.zip">Tamarin
                             code</a>
                             and <a href="doc/paper/DTKI-report.pdf">
-                            Technical Report
-                            </a>)
+                            Technical Report</a>)
                         </li>
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
