--- a/index.html
+++ b/index.html
@@ -484,10 +484,11 @@ ourg.">
 
                           <li>Marcus Völp, Francisco Rocha, Jérémie
                           Decouchant, Jiangshan Yu and Paulo
-                          Verissimo.<br> "Permanent Reencryption:
-                          How to Survive Generations of Cryptanalysts
-                          to Come".<br> <i>Security Protocols
-                              XXV</i>, 2017. (To appear)</li>
+                          Verissimo.<br> <a href="http://orbilu.uni.lu/handle/10993/32521"><b>"Permanent
+                          Reencryption: How to Survive Generations of
+                          Cryptanalysts to
+                          Come"</b></a>.<br> <i>Security Protocols
+                          XXV</i>, 2017. (To appear)</li>
 
                           <li>Jiangshan Yu and Mark
                           Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
