--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ ourg.">
                           ledger-based end-to-end secure messaging
                           system</a></b> has attracted news media's
                           attention and has been covered by <u>more
-                          than 20 international and national news
+                          than 30 international and national news
                           media </u>including <i> <u>Science
                           Daily</u></i>, <i><u>Phys.org</u></i>, <i><u>ACM
-                          TechNews</u></i>, <i><u>Futurism</u></i>,
+                          TechNews</u></i>, <i><u>EurekAlert</u></i>, <i><u>Futurism</u></i>,
                           and <i><u>Silicon Republic</u></i>. The news
                           has been released in <u>more than 5
                           languages </u>by media from <u>more than 10
