update pc member

--- a/index.html
+++ b/index.html
@@ -595,6 +595,14 @@ ourg.">
                             <ul type="circle">
                               <li>
                                 PC
+                                member, <a href="https://bcrb18.fim.uni-passau.de/index.html">
+                                DSN Workshop on Byzantine Consensus
+                                and Resilient Blockchains (BCRB'18),
+                                2018.</a>
+                              </li>
+
+                              <li>
+                                PC
                                 member, <a href="http://icc2018.ieee-icc.org">IEEE
                                 International Conference on
                                 Communications (ICC), 2018.</a>
