added anchor proof

--- a/index.html
+++ b/index.html
@@ -566,18 +566,21 @@ ourg.">
 
                       <br>
 
-                      <!-- <li><b>Draft:</b><br>  -->
-	              <!--         <ul type="circle"> -->
-                          
+                      <li><b>Draft:</b><br>
+	                      <ul type="circle">
 
-                      <!--    <\!-- <li> -\-> -->
-                      <!--    <\!--   Jiangshan Yu, Guilin Wang, and Yi -\-> -->
-                      <!--    <\!--   Mu. "Efficient and Provably Secure Single -\-> -->
-                      <!--    <\!--   Sign-on Schemes in Distributed Systems and -\-> -->
-                      <!--    <\!--   Networks", 2015. -\-> -->
-                      <!--    <\!-- </li> -\-> -->
-                      <!--         </ul> -->
-                      <!-- </li> -->
+                                <li>
+                                  Diego Kreutz, Jiangshan Yu, Fernando
+                                  M. V. Ramos, and Paulo Jorge Esteves
+                                  Veríssimo. "ANCHOR:
+                                  logically-centralized security for
+                                  Software-Defined Networks." <i>CoRR
+                                  abs/1711.03636</i>,
+                                  2017. (<a href="doc/paper/ANCHOR-proof.zip">Tamarin
+                                  code</a>)
+                         </li>
+                              </ul>
+                      </li>
                     </ul>
 
                           <!-- Kevin, Cas, JS, and Mark, Detecting the
