--- a/index.html
+++ b/index.html
@@ -578,7 +578,14 @@ ourg.">
                                   abs/1711.03636</i>,
                                   2017. (<a href="doc/paper/ANCHOR-proof.zip">Tamarin
                                   code</a>)
-                         </li>
+				</li>
+
+				<li>Jiangshan Yu, David Kozhaya,
+				Jeremie Decouchant, and Paulo
+				Esteves-Verissimo. "RepuCoin: Your
+				Reputation is Your
+				Power." <i>Cryptology ePrint Archive:
+				Report 2018/239.</li>
                               </ul>
                       </li>
                     </ul>
