comment out talks

--- a/index.html
+++ b/index.html
@@ -710,56 +710,56 @@ ourg.">
 	                      </ul>
 	                    </li>
 
-                      <li><b>Talk:</b><br>
+                    <!--   <li><b>Talk:</b><br> -->
 
-                        <ul type="circle">
-                          <li>'A Generic Framework for Three-Factor
-                          Authentication'. University of Birmingham,
-                          UK, 2013.</li>
+                    <!--     <ul type="circle"> -->
+                    <!--       <li>'A Generic Framework for Three-Factor -->
+                    <!--       Authentication'. University of Birmingham, -->
+                    <!--       UK, 2013.</li> -->
 
-                          <li>'DTKI: a new formalized
-                            PKI with verifiable trusted parties'. <br>
-                            Presented at:
-                            <ul>
-                            <li> <a href="https://sites.google.com/site/certificatetransparency/hackday">
-                                Google Certificate Transparency Hack Day</a>
-                            (Google, London,
-                              UK, 2013); </li>
-                            <li>
-                            <a href="http://www.sti.uniurb.it/events/fosad13/">
-                            FOSAD</a> (Bertinoro,
-                            Italy, 2013); </li>
-                            <li> University of Birmingham, UK, 2013.</li>
-                            <li> <a href="http://www.cryptoforma.org.uk/event/3rd-international-cryptoforma-workshop-at-esorics/">
-                            CryptoForma Workshop at ESORICS</a>
-                            (Royal Holloway, University of London,
-                              UK, 2013), </li>
+                    <!--       <li>'DTKI: a new formalized -->
+                    <!--         PKI with verifiable trusted parties'. <br> -->
+                    <!--         Presented at: -->
+                    <!--         <ul> -->
+                    <!--         <li> <a href="https://sites.google.com/site/certificatetransparency/hackday"> -->
+                    <!--             Google Certificate Transparency Hack Day</a> -->
+                    <!--         (Google, London, -->
+                    <!--           UK, 2013); </li> -->
+                    <!--         <li> -->
+                    <!--         <a href="http://www.sti.uniurb.it/events/fosad13/"> -->
+                    <!--         FOSAD</a> (Bertinoro, -->
+                    <!--         Italy, 2013); </li> -->
+                    <!--         <li> University of Birmingham, UK, 2013.</li> -->
+                    <!--         <li> <a href="http://www.cryptoforma.org.uk/event/3rd-international-cryptoforma-workshop-at-esorics/"> -->
+                    <!--         CryptoForma Workshop at ESORICS</a> -->
+                    <!--         (Royal Holloway, University of London, -->
+                    <!--           UK, 2013), </li> -->
 
-                            <li><a href="http://www.hpl.hp.com/people/philipp_reinecke/cttd-index.html">
-                            Cloud Technologies and Trust Domains </a>
-                            (CTTD, HP Labs Bristol,
-                                UK, 2013); </li><li><a href="http://imm.dtu.dk/~samo/hotspot14.html">
-                            HotSpot Workshop at ETAPS </a>
-                                (Grenoble, France, 2014).</li>
-                            <li> ETH Zurich, Switzerland, 2016</li>
-                            </ul>
-                          </li>
-                          <li>'Key usage detection', University of
-                            Birmingham, UK, 2014.</li>
-                           <li>'Device attacker models:
-                          fact and fiction'. Presented at the
-                          Twenty-third International Workshop on
-                          Security Protocols, Cambridge University,
-                          Cambridge, UK, 2015.</li>
-                          <li>'Security in periodically
-                          compromised cloud storage'. Presented at
-                          CryptoForma, University of Strathclyde,
-                            Glasgow, UK, 2015.</li>
-                          <li> 'Post compromise security'. Presented at University of Luxembourg, Luxembourg, 2016.</li>
-                          <br>
-                        </ul>
-                      </li>
-                    </ul>
+                    <!--         <li><a href="http://www.hpl.hp.com/people/philipp_reinecke/cttd-index.html"> -->
+                    <!--         Cloud Technologies and Trust Domains </a> -->
+                    <!--         (CTTD, HP Labs Bristol, -->
+                    <!--             UK, 2013); </li><li><a href="http://imm.dtu.dk/~samo/hotspot14.html"> -->
+                    <!--         HotSpot Workshop at ETAPS </a> -->
+                    <!--             (Grenoble, France, 2014).</li> -->
+                    <!--         <li> ETH Zurich, Switzerland, 2016</li> -->
+                    <!--         </ul> -->
+                    <!--       </li> -->
+                    <!--       <li>'Key usage detection', University of -->
+                    <!--         Birmingham, UK, 2014.</li> -->
+                    <!--        <li>'Device attacker models: -->
+                    <!--       fact and fiction'. Presented at the -->
+                    <!--       Twenty-third International Workshop on -->
+                    <!--       Security Protocols, Cambridge University, -->
+                    <!--       Cambridge, UK, 2015.</li> -->
+                    <!--       <li>'Security in periodically -->
+                    <!--       compromised cloud storage'. Presented at -->
+                    <!--       CryptoForma, University of Strathclyde, -->
+                    <!--         Glasgow, UK, 2015.</li> -->
+                    <!--       <li> 'Post compromise security'. Presented at University of Luxembourg, Luxembourg, 2016.</li> -->
+                    <!--       <br> -->
+                    <!--     </ul> -->
+                    <!--   </li> -->
+                    <!-- </ul> -->
 
 
 
