updated ifip wg

--- a/index.html
+++ b/index.html
@@ -604,6 +604,12 @@ ourg.">
                             <li><b>Comference Committee</b></li>
                             <ul type="circle">
                               <li>
+                                Co-Chair, 74th Meeting of the IFIP WG
+                                10.4 - Technological and societal
+                                challenges to blockchain dependability
+                                and security, Clervaux, Luxembourg,
+                                2018.</li>
+                              <li>
                                 PC
                                 member, <a href="https://bcrb18.fim.uni-passau.de/index.html">
                                 DSN Workshop on Byzantine Consensus
