added journal review

--- a/index.html
+++ b/index.html
@@ -651,7 +651,9 @@ ourg.">
                                 <li><i>
                                       IEEE Transactions on Industrial Informatics
                                 </i></li>
-
+                                <li><i>
+                                Future Generation Computer Systems
+                                </i></li>
                                 <li><i>
                                       Security and Communication
                                       Networks
@@ -663,7 +665,16 @@ ourg.">
                                 </i></li>
 	                        <li><i>Journal
 	                        of Information Security and
-	                              Applications</i></li>
+	                            Applications</i></li>
+	                        <li><i> International Journal of
+                                Distributed Sensor Networks
+                                </i></li>
+                                <li><i>
+                                    Journal of Computer Science and Technology
+                                </i></li>
+                                <li><i>
+                                    PLOS ONE
+                                </i></li>
 	                      </ul>
 	                    </li>
 
