--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ ourg.">
                                 <li><i>
                                       IEEE Transactions on Industrial Informatics
                                 </i></li>
+                                <li><i>IEEE Wireless Communications</li></li>
                                 <li><i>
                                 Future Generation Computer Systems
                                 </i></li>
