--- a/index.html
+++ b/index.html
@@ -652,6 +652,7 @@ ourg.">
                                       IEEE Transactions on Industrial Informatics
                                 </i></li>
                                 <li><i>IEEE Wireless Communications</li></li>
+                            <li><i>IEEE Access</li></li>
                                 <li><i>
                                 Future Generation Computer Systems
                                 </i></li>
